tests/type_param_bounds/type_param_bounds.exp
Error ------------------------------------------------ type_param_bounds.js:4:10

Cannot instantiate `X` because in type argument `T`, string [1] is incompatible
with number [2].



Found 1 error
