tests/type_param_bounds/type_param_bounds.js
// @flow

type X<T: number> = boolean;
(true: X<string>);
